[package]
name = "h3-quinn"
version = "0.0.0"
authors = ["Jean-Christophe BEGUE <jc.begue@pm.me>"]
edition = "2018"

[dependencies]
h3 = { path = "../h3" }
bytes = "1"
quinn = { path= "../../quinn/quinn", default-features = false}
quinn-proto = { path= "../../quinn/quinn-proto", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["io"] }

[dev-dependencies]
http = "0.2"
tokio = "1"
